fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,3 @@
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 100%;
-  white-space: nowrap;
-  font-size:250%;
-  justify-content: center;  
-}
-
-.mainflex {
-  display: inline-flex;
-  align-items: center;
-  background-color: transparent;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  justify-content: center;
-  margin-right:48px;
-  pointer-events: none;
-}
-
-#nav-links {
-  max-width: 80%;
-  display: flex;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
-}
-
-ul {
-  display: inline-flex;
-  padding-inline-start: 0;
-  align-items: center;
-  justify-content: center;
-}
-
-ul li {
-  display: inline-flex;
-  padding: 8px;
-}
-
 .icon {
   transition: transform .7s ease-in-out;
   pointer-events: auto;
@@ -57,6 +13,16 @@ html {
   margin: 0;
   padding: 0;
   overflow: hidden;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 #particles canvas{
